fixed some typos

--- a/index.html
+++ b/index.html
@@ -85,15 +85,19 @@
                   <div class="page-content" id="content app" js-slot="content" >
                     <article class="bio">
                       <p class="big-text">
-                        Hey! I am <span class="bio__photo" tabindex="0">Ronny Coste</span>, a <button class="button-text js-channel-trigger" data-channel="8">Dominican</button> Filmmaker & Software engineer based in New York City. I dabble in photography, web engineering, Cinematography, Javascript Frameworks, and design.
+                        Hey! I am <span class="bio__photo" tabindex="0">Ronny Coste</span>, 
+                        a <button class="button-text js-channel-trigger" data-channel="8">Dominican</button> 
+                        Filmmaker & Software engineer based in New York City. I dabble in photography, web engineering, cinematography, javascript frameworks, and design.
                         <br/><br/>
-                        This website is intended to be an experiencial cinema of my work as a Camera Assistant (AC), Cinematographer (DP), and Assistant Director (AD).  To see this videos in high resulition press <a href="https://www.gallery.ronnycoste.com/cinematography" target="_blank" rel="noopener noreferrer"> HERE</a>.
+                        This website is intended to be an experiencial cinema of my work as a Camera Assistant (AC), 
+                        Cinematographer (DP), and Assistant Director (AD). To see this videos in high resulition press 
+                        <a href="https://www.gallery.ronnycoste.com/cinematography" target="_blank" rel="noopener noreferrer"> HERE</a>.
                         <br/><br/>
                         I am very passionate about analog things so I hope you enjoy this website as much as I do!
                         Some of my other passions are: 
                         <a href="https://github.com/lertsoft" target="_blank" rel="noopener noreferrer">coding</a>,
                         <a href="https://gallery.ronnycoste.com" target="_blank" rel="noopener noreferrer">photography</a>,
-                        and creating apps and web experiences
+                        and web experiences
                         <a href="https://ronnycoste.com/projects" target="_blank" rel="noopener noreferrer">Look here</a>.
                         <br/><br/>
                         If you'd like to chat, feel free to send me an
