--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@costeronny" />
     <meta name="twitter:creator" content="@costeronny" />
-    <meta name="twitter:url" content="localhost:5173" />
+    <meta name="twitter:url" content="https://cinema.ronnycoste.com" />
     <meta name="twitter:title" content="Ronny | Cinematography" />
     <meta
       name="twitter:description"
@@ -28,7 +28,7 @@
     <meta itemprop="image" content="/assets/images/big-rainbow-static.jpg" />
   
     <!-- Facebook OpenGraph -->
-    <meta property="og:url" content="localhost:5173" />
+    <meta property="og:url" content="https://cinema.ronnycoste.com" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Ronny | Cinematography" />
     <meta property="og:image" content="/assets/images/big-rainbow-static.jpg" />
@@ -38,7 +38,7 @@
     />
     <meta property="og:site_name" content="Ronny | Cinematography" />
     <meta property="og:locale" content="en_US" />
-    <meta property="article:author" content="localhost:5173" />
+    <meta property="article:author" content="https://cinema.ronnycoste.com" />
   
     <link
       rel="preload"
