Change of date to a title

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="header__container">
                   
                       <div class="header__info">
-                        <div class="js-header-date">OCT 21, 1997</div>
+                        <div class="js-header-date">CINEMA CHANNELS</div>
                         <div class="js-header-controls"></div>
                         <noscript>
                           <div role="button">CHANNEL 00</div>
