Added analytics, note. The token can be exposed.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
     />
   
     <link rel="icon" href="/favicon.png" />
+
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' 
+    data-cf-beacon='{"token": "7b4a332c05cd4f5eaeff1a2a8b11f6ff"}'></script>
+    <!-- End Cloudflare Web Analytics -->
   
     <title>Ronny's Cinematography</title>
   </head>
