--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <br/><br/>
                         <span data-i18n="intend">This website is dedicated to showcasing my work in the film industry and it features a collection of my behind the scenes footage, short films and interviews with other professionals. The website is designed to give you a closer look at my work as a camera assistant and cinematographer,
                         </span> <span data-i18n="videos">and the videos are all available in high resolution,</span>
-                        <a href="https://www.gallery.ronnycoste.com/cinematography" target="_blank" rel="noopener noreferrer" data-i18n="here"> HERE</a>.
+                        <a href="https://www.ronnycoste.com/cinema" target="_blank" rel="noopener noreferrer" data-i18n="here"> HERE</a>.
                         <br/><br/>
                         <span data-i18n="passion"> I am also passionate about  </span>
                           <a href="https://gallery.ronnycoste.com" target="_blank" rel="noopener noreferrer" data-i18n="photography">analog photography</a>,
